test/inference/bad/coreml_forall.mlt
let main =
  let id = fun (x : 'a) -> x in
  id 42
